--- a/index.htm
+++ b/index.htm
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title style="color: red; background-color: antiquewhite; border: 2px;
-   font-size: larger; ">Java Script notater</title>
-    <hr>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Java Script</title>
+  </head>
+  <body>
+    <h1
+      style="
+        color: red;
+        background-color: antiquewhite;
+        font-size: larger;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+          'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        border: 5px;
+        text-align: center;
+        font-size: xx-large;
+      "
+    >
+      Java Script Notater
+      <hr />
+    </h1>
     <p>
-    <ol>Derleyici compiler - kodlari gozden geciriyor. satirda sytax hatasi makine koduna cevirmiyor. exe calistirilabilir makine kodlaridir. msi veya dmg formatinda compiler bize exe dosyalarini veriyor. paketlenmis kodlari bize veriyor. Java derleyici tabanli bir proglamlamadir. kaynak kodun musteriye gitmesinin istenmedigi yerlerde derleyici Compiler programlari kullanilir. </ol> <br>
-    <ol>Compiler tabanli programlar gelistirici acisindan daha guvenli verimli. Bu tabanli sistemler urunleri koruyor. Tamami hatasiz olmasi lazm yoksa calismaz. </ol>
-    <ol>Java Script temelde yorumlayici bir dil. Interpreter. Bu tabanli sistemler satir satir calisir.Interpreter sistemler server tabanli sistemler icin daha uygun.  </ol>
-    <ol></ol>
-    <ol></ol>
-    <ol></ol>
-    <ol></ol>
-    <ol></ol>
-    <ol></ol>
-    <ol></ol>
-</p>
+      Derleyici compiler - kodlari gozden geciriyor. satirda sytax hatasi makine
+      koduna cevirmiyor. exe calistirilabilir makine kodlaridir. msi veya dmg
+      formatinda compiler bize exe dosyalarini veriyor. paketlenmis kodlari bize
+      veriyor. Java derleyici tabanli bir proglamlamadir. kaynak kodun musteriye
+      gitmesinin istenmedigi yerlerde derleyici Compiler programlari kullanilir.
 
-    
-</body>
+      <br />
+      <br />
+
+      Compiler tabanli programlar gelistirici acisindan daha guvenli verimli. Bu
+      tabanli sistemler urunleri koruyor. Tamami hatasiz olmasi lazm yoksa
+      calismaz. Java Script temelde yorumlayici bir dil. Interpreter. Bu tabanli
+      sistemler satir satir calisir.Interpreter sistemler server tabanli
+      sistemler icin daha uygun.
+    </p>
+  </body>
 </html>
