--- a/index.htm
+++ b/index.htm
@@ -23,20 +23,33 @@
       <hr />
     </h1>
     <p>
-      Derleyici compiler - kodlari gozden geciriyor. satirda sytax hatasi makine
-      koduna cevirmiyor. exe calistirilabilir makine kodlaridir. msi veya dmg
-      formatinda compiler bize exe dosyalarini veriyor. paketlenmis kodlari bize
-      veriyor. Java derleyici tabanli bir proglamlamadir. kaynak kodun musteriye
-      gitmesinin istenmedigi yerlerde derleyici Compiler programlari kullanilir.
+        <ul>
+        <li> Derleyici compiler - kodlari gozden geciriyor. satirda sytax hatasi makine
+            koduna cevirmiyor.</li>
+        <li>exe calistirilabilir makine kodlaridir. msi veya dmg
+            formatinda compiler bize exe dosyalarini veriyor.</li>
+        <li>paketlenmis kodlari bize
+            veriyor.</li>
+        <li> Java derleyici tabanli bir proglamlamadir. </li>
+        <li>kaynak kodun musteriye
+            gitmesinin istenmedigi yerlerde derleyici Compiler programlari kullanilir.</li></ul>
+       
 
       <br />
       <br />
+<ul>
+<ol>Compiler tabanli programlar gelistirici acisindan daha guvenli verimli.</ol>
+<ol>Bu
+    tabanli sistemler urunleri koruyor.</ol>
+<ol> Tamami hatasiz olmasi lazm yoksa
+    calismaz.</ol>
+<ol>Java Script temelde yorumlayici bir dil. Interpreter.</ol>
+<ol> Bu tabanli
+    sistemler satir satir calisir.Interpreter sistemler server tabanli
+    sistemler icin daha uygun.</ol></ul>
+        
+      <br>
 
-      Compiler tabanli programlar gelistirici acisindan daha guvenli verimli. Bu
-      tabanli sistemler urunleri koruyor. Tamami hatasiz olmasi lazm yoksa
-      calismaz. Java Script temelde yorumlayici bir dil. Interpreter. Bu tabanli
-      sistemler satir satir calisir.Interpreter sistemler server tabanli
-      sistemler icin daha uygun.
     </p>
   </body>
 </html>
