java scrip angular

--- a/index.htm
+++ b/index.htm
@@ -37,16 +37,25 @@
 
       <br />
       <br />
-<ul>
-<ol>Compiler tabanli programlar gelistirici acisindan daha guvenli verimli.</ol>
-<ol>Bu
-    tabanli sistemler urunleri koruyor.</ol>
-<ol> Tamami hatasiz olmasi lazm yoksa
-    calismaz.</ol>
-<ol>Java Script temelde yorumlayici bir dil. Interpreter.</ol>
-<ol> Bu tabanli
-    sistemler satir satir calisir.Interpreter sistemler server tabanli
-    sistemler icin daha uygun.</ol></ul>
+      <ol><li>Compiler tabanli programlar gelistirici acisindan daha guvenli verimli.</li>
+      <li>Bu
+        tabanli sistemler urunleri koruyor.</li>
+      <li>Tamami hatasiz olmasi lazm yoksa
+        calismaz.</li>
+      <li>Java Script temelde yorumlayici bir dil. Interpreter.</li>
+      <li>Bu tabanli
+        sistemler satir satir calisir.</li>
+      <li>Interpreter sistemler server tabanli
+        sistemler icin daha uygun.</li>
+      <li>Java script dili React, Angular ve Vue gibi js kutuphaneleri kullanir. Ornegin Facebook , Netflix,Dropbox,Airbnb vb</li>
+      <li>NodeJS kutuphanesi browserlardaki java scrip motorunun calismasini mumkun hale getirir. Ayni zamanda Java Scrip bir backend uygulamasidir. Ornegin Netflix, Uber E-Bay vb. </li>
+      <li>Js yi bilen kisi frontedi de backendi de halleder. </li>
+      </ol>
+ 
+
+ 
+
+ 
         
       <br>
 
