--- a/index.htm
+++ b/index.htm
@@ -50,6 +50,12 @@
       <li>Java script dili React, Angular ve Vue gibi js kutuphaneleri kullanir. Ornegin Facebook , Netflix,Dropbox,Airbnb vb</li>
       <li>NodeJS kutuphanesi browserlardaki java scrip motorunun calismasini mumkun hale getirir. Ayni zamanda Java Scrip bir backend uygulamasidir. Ornegin Netflix, Uber E-Bay vb. </li>
       <li>Js yi bilen kisi frontedi de backendi de halleder. </li>
+
+      <li>React native Ionic kutuphaneler ile IOS ve Android icin mobil uygulama gelistirmede kullaniyorlar.</li>
+      <li>Tek bir framework ile fluttter gibi uygulamalar ile hizli ve performasnli urunler istiyorlarlar.Ornegin facebook , instegram,Skype, Uber,Pinterest </li>
+      <li>Electron kutuphanesi ile Masaustu Pcler Macos, windows,Linux icin uygulama gelistiriliyor. Ornegin vSCode, whatsapp,Slack Skype,Twitct Teams</li>
+      <li></li>
+      <li></li>
       </ol>
  
 
