--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
       Java Script Notater
       <hr />
     </h1>
-    <p>
+    
         <ul>
         <li> Derleyici compiler - kodlari gozden geciriyor. satirda sytax hatasi makine
             koduna cevirmiyor.</li>
@@ -36,8 +36,8 @@
        
 
       <br />
-      <br />
-      <ol><li>Compiler tabanli programlar gelistirici acisindan daha guvenli verimli.</li>
+      <br /> 
+      <ol style="color: red;background-color: bisque;"><li>Compiler tabanli programlar gelistirici acisindan daha guvenli verimli.</li>
       <li>Bu
         tabanli sistemler urunleri koruyor.</li>
       <li>Tamami hatasiz olmasi lazm yoksa
