--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
       <hr />
     </h1>
     
-        <ul>
+        <ul style="color: blue;">
         <li> Derleyici compiler - kodlari gozden geciriyor. satirda sytax hatasi makine
             koduna cevirmiyor.</li>
         <li>exe calistirilabilir makine kodlaridir. msi veya dmg
