--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS-INTRO</title>
+
+    <script>
+      console.log("Burasi Head icindeki Js kodu");
+    </script>
+
+    <!-- // defer async programi arka planda calisir. console.log("); -->
   </head>
+
   <body>
     <h1>JS INTRO</h1>
+    <script>
+      console.log("Merhaba Js");
+      x = 3 + 6;
+      console.log(x);
+    </script>
   </body>
 </html>
