--- a/javanotater.html
+++ b/javanotater.html
@@ -55,6 +55,24 @@
       <li>Tek bir framework ile fluttter gibi uygulamalar ile hizli ve performasnli urunler istiyorlarlar.Ornegin facebook , instegram,Skype, Uber,Pinterest </li>
       <li>Electron kutuphanesi ile Masaustu Pcler Macos, windows,Linux icin uygulama gelistiriliyor. Ornegin vSCode, whatsapp,Slack Skype,Twitct Teams</li>
       
+      <h2>Variabler</h2>
+      <p><ul>
+      <li>Var , const, let reserverde word denilir. bu kelimler ile Variabler olusturulur- 
+        Ornegin  var x - const y - let z - biz burda container olusturduk. x= 4+3  x degerine atanir x bir degisken. 
+        en cok const ve let degiskenleri kullanilir. var ile global degiskenler olusturlur. 
+      </li>
+      <li>const ve let lokal blokce scopped degiskenler olusturulur. 
+        Garbege Collecter cop toplayici anlamina gelir. Gunumuzde var degiskeni efektif bir cozum degil. 
+      </li>
+      <li>Const ve let dar alan icerisinde blok icinde kullaniliyor.Let kismi Blocked Scope - for </li>
+      <li>Const ve let es6 ile gelmistir. const sadece baslangicta deger atilabilir. bir kez atanir. degistirelemez. primitiv data tipleri icin gecerlidir. illa sayi veya deger atanmasi gerekir. </li>
+      <li>Let de istedgin zaman deger atamasi yapabiliriz. </li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li></ul></p>
+
       </ol>
  
 
