--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS-INTRO</title>
 
-    <script>
+    <!-- <script>
       console.log("Burasi Head icindeki Js kodu");
-    </script>
+    </script> -->
 
     <!-- // defer async programi arka planda calisir. console.log("); -->
   </head>
 
   <body>
     <h1>JS INTRO</h1>
-    <script>
+    <!-- <script>
       console.log("Merhaba Js");
       x = 3 + 6;
       console.log(x);
-    </script>
+    </script> -->
     <script src="app.js"></script>
   </body>
 </html>
