--- a/javanotater.html
+++ b/javanotater.html
@@ -70,7 +70,7 @@
       <li>Degerler surekli degisecekse let kullanmak mantikli.</li>
       <li>camelCase duyarlidir.</li>
       <li>Java script dinamik bir dil . bir degiskenin turu atanan degere gore belirlenir. </li>
-      <li></li>
+      <li>Suslu parantez bir blok koruma alani acar. blok disi kodlar gecerli olmaz o blok ile ilgili.</li>
       <li></li></ul></p>
 
       </ol>
