--- a/js03-conditions/index.html
+++ b/js03-conditions/index.html
@@ -18,6 +18,6 @@
     </header>
     <h1>JavaScript Basics</h1>
     <h2>JS02 - Operators</h2>
-    <script src="conditions.js"></script>
+    <script src="../conditions.js"></script>
   </body>
 </html>
