--- a/js03-conditions/index.html
+++ b/js03-conditions/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Basics 02</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../styl.css6" />
   </head>
   <body>
     <header>
