--- a/js04-loop/index.html
+++ b/js04-loop/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Basics 04</title>
 
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>JavaScript Basics</h1>
     <h2>JS04 - Loops</h2>
-    <script src="./for.js"></script>
+    <script src="for.js"></script>
   </body>
 </html>
