--- a/js05-functions1/index.html
+++ b/js05-functions1/index.html
@@ -13,5 +13,6 @@
     <h2>JS05 - Functions-1</h2>
 
     <script src="declaration.js"></script>
+    <script src="expression.js"></script>
   </body>
 </html>
