--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h2>JavaScript Basics</h2>
       <h4>JS07 - String Methods</h4>
 
-      <script src="App.js"></script>
+      <script src="./js07-string/App.js"></script>
     </header>
   </body>
 </html>
