--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS06 - String Methods and Arrays</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styl.css" />
   </head>
   <body>
     <header>
