--- a/js08-Array/index.html
+++ b/js08-Array/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS08 - Arrays</title>
     <link rel="icon" type="image/x-icon" href="./style/js.ico" />
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./styl.css" />
   </head>
   <body>
     <header>
@@ -18,7 +18,7 @@
       <h2>JavaScript Basics</h2>
       <h4>JS08 - Arrays</h4>
 
-      <script src="./styl.css"></script>
+      <script src="./arrays.js"></script>
     </header>
   </body>
 </html>
