--- a/js12_dom-intro/index.html
+++ b/js12_dom-intro/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header id="header">
-      <h1 style="text-align: center">DOM SELECTORS</h1>
+      <h1 id="heading1" style="text-align: center">DOM SELECTORS</h1>
     </header>
     <main>
       <section class="add-item">
@@ -28,6 +28,6 @@
       </section>
     </main>
 
-    <script src="selectors.js"></script>
+    <script src="./selctors.js"></script>
   </body>
 </html>
