--- a/js12_dom-intro/index.html
+++ b/js12_dom-intro/index.html
@@ -28,6 +28,7 @@
       </section>
     </main>
 
-    <script src="./selctors.js"></script>
+    <!-- <script src="./selctors.js"></script> -->
+    <script src="./traversingDOM.js"></script>
   </body>
 </html>
