--- a/js13_createElement/index.html
+++ b/js13_createElement/index.html
@@ -34,6 +34,6 @@
       </section>
     </main>
 
-    <script src="createNode.js"></script>
+    <script src="./crateNode.js"></script>
   </body>
 </html>
