Guess The Number

--- a/Projects/prosject_ gues the number 2/index.html
+++ b/Projects/prosject_ gues the number 2/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+    
+    <title>Guess The Number</title>
 </head>
 <body>
     <h2>Guess The Number  (1 - 100)</h2>
-
+<input type="number" id="userInput" min="1" max="100">
     
+<button id="submit">Check</button>
+
+
 </body>
 
 <script src="./guess_the_number.js"></script>
