--- a/Projects/prosject_ gues the number 2/index.html
+++ b/Projects/prosject_ gues the number 2/index.html
@@ -5,17 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    
     <title>Guess The Number</title>
 </head>
 <body>
-    <h2>Guess The Number  (1 - 100)</h2>
-<input type="number" id="userInput" min="1" max="100">
-    
-<button id="submit">Check</button>
-
-
+    <main>
+        <h2>Guess The Number (1 - 100)</h2>
+        <p id="message">Guess The Number (1 - 100)</p>
+        <input type="number" id="userInput" min="1" max="100">
+        <button onclick="guess()" id="submit">CHECK</button>
+    </main>
+    <script src="./guess_the_number.js"></script>
 </body>
-
-<script src="./guess_the_number.js"></script>
 </html>
