--- a/Projects/prosject_ gues the number 2/index.html
+++ b/Projects/prosject_ gues the number 2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,17 @@
     <link rel="stylesheet" href="./index.css">
     <title>Guess The Number</title>
 </head>
+
 <body>
     <main>
         <h2>Guess The Number (1 - 100)</h2>
         <p id="message">Guess The Number (1 - 100)</p>
         <input type="number" id="userInput" min="1" max="100">
         <button onclick="guess()" id="submit">CHECK</button>
+        <img src="./33266.jpg" alt="">
     </main>
+    <img src="./Skjermbilde 2023-06-03 165928.png" alt="">
     <script src="./guess_the_number.js"></script>
 </body>
+
 </html>
