--- a/js14_dom-prosject/index.html
+++ b/js14_dom-prosject/index.html
@@ -10,7 +10,32 @@
 </head>
 
 <body>
-    <h1 style="color: white">Rock,Paper, Scissor</h1>
+
+
+
+    <main class="container">
+        <section class="score-card">
+            <p class="top">Top Score: <span id="top-score"> 0 : 0 </span></p>
+
+            <p>You <span id="your-score">0</span>: <span id="pc-score">0</span> PC</p>
+
+            <p class="description">Please make your selection</p>
+
+<article class="selection">
+
+<img src="./assets/rock.png" alt="rock">
+<img src="./assets/paper.png" alt="rock">
+<img src="./assets/scissor.png" alt="rock">
+
+</article>
+
+
+        </section>
+    </main>
+
+
+
+
     <script src="./app.js"></script>
 </body>
 
