--- a/js14_dom-prosject/index.html
+++ b/js14_dom-prosject/index.html
@@ -24,14 +24,23 @@
 <article class="selection">
 
 <img src="./assets/rock.png" alt="rock">
-<img src="./assets/paper.png" alt="rock">
-<img src="./assets/scissor.png" alt="rock">
+<img src="./assets/paper.png" alt="paper">
+<img src="./assets/scissor.png" alt="scissor">
+
+<section class="choice-section">
+<article class="choices">
+
+<div id="your-choice"></div>
+<div id="pc-choice"></div>
+
 
 </article>
+</section>
 
 
-        </section>
-    </main>
+</article>
+</section>    
+</main>
 
 
 
