--- a/Projects/project_check-out/index.html
+++ b/Projects/project_check-out/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -44,7 +44,7 @@
                 <div class="main__action--btn">
                   <div class="main__quantity-controller">
                     <i class="fa-solid fa-minus"></i>
-                    <p class="main__quantity-controller--text" id="quantity">1</p>
+                    <p class="main__quantity-controller--text" id="quantity">5</p>
                     <i class="fa-solid fa-plus"></i>
                   </div>
                   <div class="main__product-removal">
@@ -142,6 +142,6 @@
       </div>
     </main>
 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
