--- a/Projects/project_check-out/index.html
+++ b/Projects/project_check-out/index.html
@@ -17,11 +17,11 @@
     <header class="header">
       <h1 class="header__title">Checkout App</h1>
     </header>
-    <nav class="nav">
+    <nav id="nav" class="nav">
       <ul class="nav__list">
         <li class="nav__list--text">My Cart (<span class="amount-of-product">3</span> Products)</li>
-        <li class="nav__list--btn">
-          Delete Products <i class="fa-regular fa-trash-can"></i>
+        <li class="nav__list--btn"> 
+          Delete Products <i  class="fa-regular fa-trash-can" id="deleteOl"></i>
         </li>
       </ul>
     </nav>
