--- a/js17_async1/index.html
+++ b/js17_async1/index.html
@@ -14,10 +14,11 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body >
     <header>
       <h1>JavaScript Advanced</h1>
       <h2>JS17 - ASYNC-1</h2>
+      <p id="userList"></p>
     </header>
 
     <script src="./3-fetchAPI.JS"></script>
