--- a/Kodluyoruz.org/Java_script/js_02-degisken_tanimlama/index.html
+++ b/Kodluyoruz.org/Java_script/js_02-degisken_tanimlama/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Degiskenler</h1>
+<body style="background-color: antiquewhite;">
+    <h1 style="text-align: center; background-color: rgb(255, 225, 0);">Degiskenler</h1>
 
     <script src="./index.js"></script>
 </body>
