--- a/js18_asymc2/index.html
+++ b/js18_asymc2/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -20,6 +20,6 @@
       <h2>JS-18 - ASYNC-2</h2>
     </header>
 
-    <script src="async-await.js"></script>
+    <script src="./async-await.js""></script>
   </body>
 </html>
