--- a/js18_asymc2/index.html
+++ b/js18_asymc2/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -22,9 +22,9 @@
 
     <section class="container mt-4">
       <h1 class="text-danger mb-4">TOP HEADLINES</h1>
-      <div id="news"></div>
+      <div id="news" class="row justify-content-center g-3"></div>
     </section>
 
-    <script src="./async-await.js"></script>
+    <script src="async-await.js"></script>
   </body>
 </html>
