--- a/Projects/project_countries/index.html
+++ b/Projects/project_countries/index.html
@@ -12,19 +12,20 @@
     <title>Countries</title>
 </head>
 
-<body>
+<body class="text-center">
 
     <!--  * on change include containe gibi kullanilabilir -->
 
-    <head>COUNTRIES</head>
-    <input type="text">
+    <header class="container-fluid display-4 text-danger mt-5  ">COUNTRIES</header>
+    <br>
+    <input type="text" autofocus class="border-4 border-danger w-25 h-75 p-3 ">
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 
     <script src="./countries.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
