--- a/Kodluyoruz.org/Java_script/js_09-dom/index.html
+++ b/Kodluyoruz.org/Java_script/js_09-dom/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+
+<h1>Kodluyoruz- Front-End 101</h1>
+
+
+<div id="app">Merhaba Dunya</div>
+
+
+
+
+
+
+
  <script src="./index.js"></script>
 </body>
 </html>
