--- a/Kodluyoruz.org/Java_script/js_09-dom/index.html
+++ b/Kodluyoruz.org/Java_script/js_09-dom/index.html
@@ -10,11 +10,13 @@
 <h1>Kodluyoruz- Front-End 101</h1>
 
 
-<div id="app">Merhaba Dunya</div>
+<h2 id="title">Merhaba Dunya</h2>
 
-
-
-
+<ul>
+    <li> 
+        <a id="a" href="#">Link bilgisi</a>
+    </li>
+</ul>
 
 
 
