--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Kodluyoruz_Front-End 101</h1>
+    <h1 id="greeting">Kodluyoruz_Front-End 101</h1>
 
     <h2>Kullanicidan bilgi almak</h2>
 
