--- a/Projects/prosject_Github-followers/index.html
+++ b/Projects/prosject_Github-followers/index.html
@@ -36,9 +36,9 @@
           </button>
         </div>
       </article>
-      <section class="row row-cols-1 row-cols-md-3 g-4" id="cards"></section>
+      <section class="row row-cols-1 row-cols-md-3 g-4 cards" id="cards"></section>
     </main>
 
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
