--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -10,6 +10,6 @@
 
     <h2>Kullanicidan bilgi almak</h2>
 
-    <script src="./js_11-promt kullanicidan bilgi almak.js"></script>
+    <script src="./js_12- orgeye erisme.js"></script>
 </body>
 </html>
