--- a/30 days 30 project/day1/index.html
+++ b/30 days 30 project/day1/index.html
@@ -16,7 +16,7 @@
       <!-- Bootstrap -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
       <!-- My Css -->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./style.css">
 </head>
       <title>Weather App</title>
 </head>
@@ -88,6 +88,6 @@
 ​
 ​
 ​
-     <script src="app.js"></script>
+     <script src="./weather.js"></script>
 </body>
 </html>
