--- a/UDEMY PROJECTS/DAY1/index.html
+++ b/UDEMY PROJECTS/DAY1/index.html
@@ -8,12 +8,38 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="./styl.css">
-    <title>My Project</title>
+    <title>WAY TO REINVENT YOURSELF</title>
 </head>
 
 <body>
-    <h1>Project Starter</h1>
 
+    <div class="container">
+
+        
+        <div class="panel active"
+            style="background-image: url(./img/home-office-1867761__340.jpg)">
+            <h3>WAY TO REINVENT YOURSELF</h3>
+        </div>
+        
+        <div class="panel"
+            style="background-image: url(./img/courses.jpg)">
+            <h3>Courses</h3>
+        </div>
+
+        <div class="panel"
+            style="background-image: url(./img/slider1.jpg)">
+            <h3>Learning Goals</h3>
+        </div>
+        <div class="panel"
+            style="background-image: url(./img/Which-tech-career-is-right-for-you-1-1024x670.png)">
+            <h3>Which Tech Career Is Right For You?</h3>
+        </div>
+        <div class="panel"
+            style="background-image: url(./img/world.jpg)">
+            <h3>Explore The World</h3>
+        </div>
+
+    </div>
 
 
     <script src="./script.js"></script>
