--- a/Projects/project_Crypto-Coin-App/index.html
+++ b/Projects/project_Crypto-Coin-App/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crypto Coin App</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <script src="js/aes.js"></script>
-  <script src="js/Extentions.js"></script>
+  <script src="./js/aes.js"></script>
+  <script src="./js/Extentions.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
@@ -37,7 +37,7 @@
       </small>
     </div>
   </footer>
-  <script src="crypto.js"></script>
+  <script src="./js/crypto.js"></script>
 </body>
 
 </html>
