--- a/UDEMY PROJECTS/day2/index.html
+++ b/UDEMY PROJECTS/day2/index.html
@@ -11,7 +11,7 @@
     <div class="container">
 
 <div class="progress-container">
-    <div class="progress" id="progres"></div>
+    <div class="progress" id="progress"></div>
 
 <div class="circle active">1</div>
 <div class="circle ">2</div>
@@ -21,7 +21,7 @@
 </div>
 
 <button class="btn" id="prev" disabled>Prev</button>
-<button class="btn" id="Next" disabled>Next</button>
+<button class="btn" id="next" >Next</button>
 
     </div>
 
