--- a/js20_oop/index.html
+++ b/js20_oop/index.html
@@ -14,6 +14,6 @@
       <h2>JS20 - OOP</h2>
     </header>
 
-    <script src="./classesES6.JS"></script>
+    <script src="./polymporphism.js"></script>
   </body>
 </html>
