--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -14,7 +14,7 @@
 <body>
     <h1 id="greeting">Kodluyoruz_Front-End 101</h1>
 
-    <h2>Kullanicidan bilgi almak</h2>
+    <h2 id="info">Kullanicidan bilgi almak</h2>
     
 <ul id="list">
     <li>Lorem.</li>
