--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -7,7 +7,11 @@
 
     <style>
         .text-primary {
-            color:blue
+            color: blue
+        }
+
+        .text-danger {
+            color:red
         }
     </style>
 </head>
