--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -19,7 +19,11 @@
     <h1 id="greeting">Kodluyoruz_Front-End 101</h1>
 
     <h2 id="info">Kullanicidan bilgi almak</h2>
-    
+
+    <h3 id="counter">100</h3>
+    <button id="increase"> Arttir</button>
+    <button id="decrease">Azalt</button>
+
 <ul id="list">
     <li>Lorem.</li>
     <li>Repellat?</li>
