--- a/UDEMY PROJECTS/day3/index.html
+++ b/UDEMY PROJECTS/day3/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container show-nav">
 
         <div class="circle-container">
 
@@ -137,11 +137,11 @@
                 cybersecurity, data science, software development, Salesforce, Blockchain & Web3 Development, and SDET -
                 all within just a few months. Our unique programs provide affordable and effective IT training that
                 allows learners to gain both the classroom knowledge and hands-on skills needed to succeed in this
-                fast-paced industry.
+                fast-paced industry. <br></br>
                 At Clarusway, we are committed to helping individuals reach their full potential by utilizing innovative
                 mentorship programs and project-based group study methods. Our team of expert instructors specialize in
                 providing students with an interactive learning experience that combines both theoretical and practical
-                knowledge to ensure they can become subject matter experts quickly.
+                knowledge to ensure they can become subject matter experts quickly. <br><br>
                 At Clarusway, we believe everyone should have access to quality coding education at an affordable price
                 point – subscribe now and begin your journey towards a successful tech career today!</p>
         </div>
