--- a/Projects/project_ssn/index.html
+++ b/Projects/project_ssn/index.html
@@ -7,7 +7,7 @@
     <title>SSN Check Application</title>
     <style>
 button:hover {
-    background-color: rgb(255, 98, 0);
+    background-color: rgb(114, 234, 75);
     color: aliceblue;
     transition: 0.8s;
 }
@@ -25,7 +25,7 @@ button:hover {
     
       </form>
 
-      <p>
+      <p style="color: white; font-size: 20px;">
       </p>
 
 
