--- a/UDEMY PROJECTS/day4/index.html
+++ b/UDEMY PROJECTS/day4/index.html
@@ -15,7 +15,7 @@
 <body>
     
 <div class="search">
-<input type="text" class="input" placeholder="Search ...">
+<input type="text" class="input" placeholder="Search ..." autofocus>
 <button class="btn">
 <i class="fas fa-search"></i>
 
