--- a/UDEMY PROJECTS/day4/index.html
+++ b/UDEMY PROJECTS/day4/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     
-<div class="search">
+<div class="search active">
 <input type="text" class="input" placeholder="Search ..." autofocus>
 <button class="btn">
 <i class="fas fa-search"></i>
