--- a/UDEMY PROJECTS/day5/index.html
+++ b/UDEMY PROJECTS/day5/index.html
@@ -8,10 +8,14 @@
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
     crossorigin="anonymous" />
 
-    <title>Document</title>
+    <title>Blurry Loadingt</title>
 </head>
 <body>
     
+
+    <section class="bg"></section>
+
+    <div class="loading-text">0%</div>
 
     <script src="./index.js"></script>
 </body>
