--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -31,12 +31,12 @@
 </ul> -->
 <h2 id="info"></h2>
 
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <div class="col-sm-8 offset-sm-2">
-            <form id="userForm">
+            <form id="userForm" method="get">
                 <input type="number" name="score" id="score">
-                <button type="submit">Gonder</button>
+                <button type="submit" class="btn btn-success">Gonder</button>
             </form>
         </div>
     </div>
