--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -36,6 +36,8 @@
         <div class="col-sm-8 offset-sm-2">
             <form id="userForm" method="get">
                 <input type="number" name="score" id="score">
+                <button type="reset" class="btn btn-danger">Reset</button>  
+                <!-- * formun standart ozelliklerindendir reset -->
                 <button type="submit" class="btn btn-success">Gonder</button>
             </form>
         </div>
