--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <!-- <style>
         .text-primary {
             color: blue
@@ -15,6 +17,7 @@
         }
     </style> -->
 </head>
+
 <body>
     <!-- <h1 id="greeting">Kodluyoruz_Front-End 101</h1>
 
@@ -29,24 +32,36 @@
     <li>Repellat?</li>
     <li>Laborum?</li>
 </ul> -->
-<h2 id="info"></h2>
+    <h2 id="info"></h2>
 
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-sm-8 offset-sm-2">
-            <form id="userForm" method="get">
-                <input type="number" name="score" id="score">
-                <button type="reset" class="btn btn-danger">Reset</button>  
-                <!-- * formun standart ozelliklerindendir reset -->
-                <button type="submit" class="btn btn-success">Gonder</button>
-            </form>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-sm-8 offset-sm-2">
+                <form id="userForm">
+
+                    <div class="mb-3">
+                        <label for="username">Kullanici Adi</label>
+                        <input type="text" name="username" id="username">
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="score">Not Bilgisi</label>
+                        <input type="number" name="score" id="score">
+                    </div>
+                    <button type="reset" class="btn btn-danger">Reset</button>
+                    <!-- * formun standart ozelliklerindendir reset -->
+                    <button type="submit" class="btn btn-success">Gonder</button>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
     <script src="./js_24-form.js"></script>
 </body>
+
 </html>
