form control label

--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -40,13 +40,13 @@
                 <form id="userForm">
 
                     <div class="mb-3">
-                        <label for="username">Kullanici Adi</label>
-                        <input type="text" name="username" id="username">
+                        <label class="form-label" for="username">Kullanici Adi</label>
+                        <input class="form-control" type="text" name="username" id="username">
                     </div>
 
                     <div class="mb-3">
-                        <label for="score">Not Bilgisi</label>
-                        <input type="number" name="score" id="score">
+                        <label class="form-label" for="score">Not Bilgisi</label>
+                        <input class="form-control" type="number" name="score" id="score">
                     </div>
                     <button type="reset" class="btn btn-danger">Reset</button>
                     <!-- * formun standart ozelliklerindendir reset -->
