--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+
+    <div id="alert"></div>
     <!-- <h1 id="greeting">Kodluyoruz_Front-End 101</h1>
 
     <h2 id="info">Kullanicidan bilgi almak</h2>
@@ -31,7 +33,11 @@
     <li>Lorem.</li>
     <li>Repellat?</li>
     <li>Laborum?</li>
+
+
 </ul> -->
+
+<h1 id="greeting"> Kodluyoruz - Front-End 101</h1>
     <h2 id="info"></h2>
 
     <div class="container mt-5">
