--- a/Kodluyoruz.org/Java_script/index.html
+++ b/Kodluyoruz.org/Java_script/index.html
@@ -37,7 +37,7 @@
 
 </ul> -->
 
-<h1 id="greeting"> Kodluyoruz - Front-End 101</h1>
+<h1 id="greeting" style="text-align: center;" class="mt-5"> Kodluyoruz - Front-End 101</h1>
     <h2 id="info"></h2>
 
     <div class="container mt-5">
@@ -46,13 +46,13 @@
                 <form id="userForm">
 
                     <div class="mb-3">
-                        <label class="form-label" for="username">Kullanici Adi</label>
-                        <input class="form-control" type="text" name="username" id="username">
+                        <label class="form-label" for="username" >Kullanici Adi</label>
+                        <input class="form-control" autofocus type="text" name="username" id="username">
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label" for="score">Not Bilgisi</label>
-                        <input class="form-control" type="number" name="score" id="score">
+                        <input class="form-control" autofocus type="number" name="score" id="score">
                     </div>
                     <button type="reset" class="btn btn-danger">Reset</button>
                     <!-- * formun standart ozelliklerindendir reset -->
