--- a/Kodluyoruz.org/Java_script/js_10-Array/index.html
+++ b/Kodluyoruz.org/Java_script/js_10-Array/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>Kodluyoruz</h1>
+
+    <h2 id="info">Info</h2>
     <script src="./Array.js"></script>
 </body>
 </html>
