--- a/Kodluyoruz.org/Java_script/js_10-Array/index.html
+++ b/Kodluyoruz.org/Java_script/js_10-Array/index.html
@@ -9,7 +9,7 @@
 
     <h1>Kodluyoruz</h1>
 
-    <h2 id="info">Info</h2>
-    <script src="./Array.js"></script>
+    <h2 id="Donguler">Info</h2>
+    <script src="./loops.js"></script>
 </body>
 </html>
