--- a/Kodluyoruz.org/Java_script/js_10-Array/index.html
+++ b/Kodluyoruz.org/Java_script/js_10-Array/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-    <h1>Kodluyoruz</h1>
+    <h1 style="text-align: center;">Kodluyoruz</h1>
 
-    <h2 id="Donguler">Info</h2>
+    <h2 style="text-align: center;" id="Donguler">Donguler</h2>
     <script src="./loops.js"></script>
 </body>
 </html>
